tests/ui/restrictions/impl-restriction.stderr
error: trait cannot be implemented outside `foo`
  --> $DIR/impl-restriction.rs:21:1
   |
LL |         pub(crate) impl(super) trait Foo {}
   |                    ----------- trait restricted here
...
LL | impl foo::bar::Foo for u8 {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

